--- a/config/locales/views/layouts/en.yml
+++ b/config/locales/views/layouts/en.yml
@@ -22,8 +22,8 @@ en:
           text: |
             Our website clarat.org is just getting started. You can already find
             many offers of help in Berlin. We will soon gather offers for other
-            cities as well. We appreciate your help: Did you find room for
-            improvement? Is something not working? Simply
+            cities as well. We appreciate your help: Is there something we can do better?
+            Is something not working? Simply
           link: "write us a message."
         unavailable_location_modal: |
           At the moment you can only find offers of help for Berlin. We are
