--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,7 +9,7 @@ en:
     geolocation:
       get: Use my location!
       waiting: Searching location... You might have to allow this.
-      error: Location not found. Please enter again.
+      error: Location not found. Please enter it manually.
     location_required: |
       Please enter a location at which you want to search for help.
     autocomplete_footer: All %{results} search results for '%{query}'
@@ -18,8 +18,8 @@ en:
       text: 'There are multiple results for this marker.'
       anchor: 'Show all >>'
     cookie_warning_html: |
-      Cookies help us providing this website. By using the website you accept
-      the usage of Cookies.
+      Cookies help us deliver our services. By using the website you agree to our
+      use of Cookies.
       <a href="/datenschutzhinweise">More</a>.
     more_filter_options: 'Show more filters'
     less_filter_options: 'Show fewer filters'
@@ -28,11 +28,25 @@ en:
       error: "Search error"
       message: |
         We are sorry but an error occurred during the search. Please contact us
-        if this problem reocurs.
+        if this problem reoccurs.
     query_field:
       placeholder_words:
         - adoption
         - drugs
+        - violence
+        - private lessons
+        - emergency
+        # - justice
+        - orphan
+        - unemployed
+        - food
+        - ill
+        - homeless
+        - smoking
+        - pregnant
+        - gay
+        - skipping school
+        # - living
       example_placeholder: "e.g. %{word}, …"
 
     search:
@@ -49,7 +63,7 @@ en:
         enlarge_map: "Enlarge map"
         headline_small_map: "Local offers on the map"
       personal_offers:
-        zero: "Alas, no offers" # :P
+        zero: "Unfortuantely no offers found" #
         one: "One local offer"
         other: "%{count} local offers"
       remote_offers:
