--- a/config/locales/views/offers/en.yml
+++ b/config/locales/views/offers/en.yml
@@ -45,26 +45,26 @@ en:
           language:
             deu: "German"
             eng: "English"
-            tur: "Türkish"
+            tur: "Turkish"
             tha: "Thai"
             bul: "Bulgarian"
-            ron: "Rumanian"
+            ron: "Romanian"
             sqi: "Albanian"
             ara: "Arabic"
             fra: "French"
             kur: "Kurdish"
             rus: "Russian"
             srp: "Serbian"
-            amh: "Amharisch"
+            amh: "Amharic"
             bos: "Bosnian"
             ita: "Italian"
             hrv: "Croatian"
             pol: "Polish"
-            por: "Portugese"
+            por: "Portuegese"
             vie: "Vietnamese"
             wol: "Wolof"
             fas: "Persian (Farsi)"
-            ben: "Bengalisch"
+            ben: "Bengalese"
             spa: "Spanish"
             tam: "Tamil"
             urd: "Urdu"
@@ -73,27 +73,27 @@ en:
             ell: "Greek"
             hin: "Hindi"
             mkd: "Macedonian"
-            rom: "Romanes"
+            rom: "Romany"
             hun: "Hungarian"
             "568": "Dutch"
             "326": "Ukranian"
             "639": "Dari"
-            "150": "German sign language"
+            "150": "German Sign Language"
             lav: "Latvian"
             lit: "Lithuanian"
             kik: "Kikuyu"
             zho: "Chinese"
             swa: "Kiswahili"
             luo: "Luo"
-            ltz: "Luxemburgish"
+            ltz: "Luxembourgish"
             nor: "Norwegian"
-            swe: "Schwedish"
+            swe: "Swedish"
             snk: "Soninke"
             tgk: "Tadjik"
             tel: "Telugu"
-            tuk: "Turkmenian"
+            tuk: "Turkmen"
             uzb: "Uzbek"
-            bel: "Belorussian"
+            bel: "Belarusian"
             zza: "Zaza"
           contact_type:
             personal: "personal"
@@ -114,12 +114,66 @@ en:
     show:
       what: "What is it about?"
       next_steps: "What do you need to do?"
-      who: "Where can you find the help?"
+      who: "Who offers this help?"
+      speaking: "In what language will you get help?"
       last_updated: "Entry last modified on"
+      current_and_original_locale:
+        eng: "English"
+        deu: "German - Deutsch"
+        fra: "French - Français"
+        tur: "Turkish - Türkçe"
+        ara: "Arabian - عربي"
+        rus: "Russian - русский"
+        spa: "Spanish - español"
+        tha: "Thai - ภาษาไทย"
+        bul: "Bulgarian - български"
+        ron: "Romanian - română"
+        sqi: "Albanian - Shqipja"
+        kur: "Kurdish - کوردی"
+        srp: "Serbian - српски"
+        amh: "Amharic - አማርኛ"
+        bos: "Bosnian - bosanski"
+        ita: "Italic - italiano"
+        hrv: "Kroatian - hrvatski"
+        pol: "Polish - polski"
+        por: "Portuguese - português"
+        vie: "Vietnamese - tiếng Việt"
+        wol: "Wolof - wɔlɔf"
+        ben: "Bengalese - বাংলা"
+        fas: "Persian (Farsi) - فارسی"
+        tam: "Tamil - தமிழ்"
+        urd: "Urdu - اردو"
+        mul: "more languages upon request"
+        aze: "Azerbaijani - Azərbaycan"
+        ell: "Greek - ελληνικά"
+        hin: "Hindi - हिन्दी"
+        mkd: "Macedonian - македонски"
+        rom: "Romany - Romani"
+        hun: "Hungarian - magyar"
+        "568": "Dutch - Nederlands"
+        "326": "Ukrainian - українська"
+        "639": "Dari - دری"
+        "150": "German Sign Language - Deutsche Gebärdensprache"
+        lav: "Latvian - latviešu"
+        lit: "Lithuanian - lietuvių"
+        kik: "Kikuyu - Gĩkũyũ"
+        zho: "Chinese - 普通话 / 普通話"
+        swa: "Swahili - Kiswahili"
+        luo: "Luo - Dholuo"
+        ltz: "Luxembourgish - Lëtzebuergesch"
+        nor: "Norwegian - Norsk"
+        swe: "Swedish - svenska"
+        snk: "Soninke - Soninkanxaane"
+        tgk: "Tadjik - тоҷикӣ / تاجیکی"
+        tel: "Telugu - తెలుగు"
+        tuk: "Turkmen - Türkmençe / Tүркменче"
+        uzb: "Uzbek - Oʻzbek tili"
+        bel: "Belarusian - беларуская мова"
+        zza: "Zaza - Zazaki / Kırmancki"
 
       # show partials
       opening_section:
-        heading: "When can you do this?"
+        heading: "When can you do that?"
         days:
           mon: Monday
           tue: Tuesday
@@ -131,13 +185,19 @@ en:
       website_section:
         internet_presence: "Where can you find out more online?"
         websites:
-          own: "Webseite"
+          own: "Website"
           document: "Further Information"
           facebook: "Facebook"
           twitter: "Twitter"
           youtube: "Youtube"
           gplus: "Google+"
           pinterest: "Pinterest"
+          online_consulting: "Online Consultation"
+          chat: "Chat"
+          forum: "Forum"
+          online_course: "Online Course"
+          application_form: "Application Form"
+          contact_form: "Contact Form"
       who_contact_people:
         female: "Ms."
         male: "Mister"
@@ -147,10 +207,13 @@ en:
         fax: "Fax: "
         email: "Email: "
         obfuscated_email: |
-          This e-mail address is protected from spam bots, you must enable JavaScript in
-          your browser to view it.
+          This e-mail address is protected from spam bots, you must enable
+          JavaScript in your browser to view it.
       who_section:
-        heading: "how can you get in touch?"
+        heading: "How can you get in touch?"
       who_location:
         organizations: 'An offer provided by:'
+      next_steps:
+        heading: "What do you have to do?"
+        code_word: "What do you have to ask for or look for on the website?"
       # /show partials
