clarat-org/clarat#659 different caching, minor fixes and remove old FAQ texts from all locale files

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -87,7 +87,9 @@ de:
         Streitigkeiten im Zusammenhang mit dieser Webseite unterliegen dem Recht
         der Bundesrepublik Deutschland.
         </p>
-        
+    faq:
+      title: "Häufige Fragen"
+
     privacy:
       title: "Datenschutz"
       heading: "Datenschutzhinweise"
